syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message RemovedProductEvent {
    uint64 id = 1;
    string user = 2;
}